objects/StaffSectionsCreation__mdt.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_After_School__c</fullName>
        <label>In School/ Extended Learning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>In School</fullName>
                </value>
                <value>
                    <fullName>Extended Learning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tutoring: Math</fullName>
                    <default>true</default>
                    <label>Tutoring: Math</label>
                </value>
                <value>
                    <fullName>Tutoring: Literacy</fullName>
                </value>
                <value>
                    <fullName>DESSA</fullName>
                </value>
                <value>
                    <fullName>Math Inventory</fullName>
                </value>
                <value>
                    <fullName>Reading Inventory</fullName>
                </value>
                <value>
                    <fullName>Attendance Check In Check Out</fullName>
                </value>
                <value>
                    <fullName>Coaching: Attendance</fullName>
                </value>
                <value>
                    <fullName>50 Acts of Greatness</fullName>
                </value>
                <value>
                    <fullName>50 Acts of Leadership</fullName>
                </value>
                <value>
                    <fullName>Coaching: SEL/SED (Local)</fullName>
                </value>
                <value>
                    <fullName>Enrichment</fullName>
                </value>
                <value>
                    <fullName>SEL/SED Check In Check Out</fullName>
                </value>
                <value>
                    <fullName>Homework Assistance</fullName>
                </value>
                <value>
                    <fullName>Afterschool Heroes</fullName>
                    <isActive>false</isActive>
                    <label>Afterschool Heroes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_Frequency__c</fullName>
        <label>Section Frequency</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Dosage__c</fullName>
        <label>Target Dosage</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>StaffSectionsCreation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Program_Name__c</columns>
        <columns>In_After_School__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Target_Dosage__c</columns>
        <columns>Section_Frequency__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>StaffSectionsCreation</pluralLabel>
</CustomObject>