objects/StaffSectionsCreation__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Program_Name__c</columns>
    <columns>In_After_School__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Target_Dosage__c</columns>
    <columns>Section_Frequency__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>